2006-05-29  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xdb/mysql.py:
	Fixed potential security hole.  =(  (not escaping variable)

	* tools/managessi.py:
	Added permissions and visibility functionality.

	* src/tlib/oscar.py:
	Added better SSI support for PDInfo entry.

	* src/xdb/mysql.py:
	Added ping before each mysql command to reconnect if connection lost.

2006-05-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	* src/jabw.py:
	* src/adhoc.py:
	* src/iq.py:
	* src/disco.py:
	* src/services/IqAvatarFactory.py:
	Switched defaultUri to uri.

	* src/avatar.py:
	* src/contact.py:
	Killed newlines in base64 encodings.

2006-05-07  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	Added ability to disable away im-messages.

2006-05-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	Added ability to have user-specific handlers.
	Added ability to kill name in identity.

	* src/pubsub.py:
	Updated to handle disco responses for pubsub stuff.

2006-04-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* config_example.xml:
	* src/session.py:
	* src/services/IqAvatarFactory.py:
	* src/jabw.py:
	Added options to disable each avatar style separately.

	* src/jabw.py:
	Tweaked to handle removal of resources more normally.

	* src/contact.py:
	Added more nickname functionality.

	* src/main.py:
	Tweaked loop call stuff.

	* src/pubsub.py:
	* src/main.py:
	* src/contact.py:
	Began adding support for PEP avatars and nicknames (.. maybe?)

2006-04-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/debug.py:
	* src/main.py:
	Moved debugging around a tad.

	* src/main.py:
	Added improved support for reactors.  User can now pick whatever
	reactor they want, with some that are 'known' to work.
	cf reactor added for OS X.  cf stills needs to be tested more though.

	* src/debug.py:
	* src/main.py:
	* src/xdb/__init__.py:
	Added support for skipping display of 'args'.
